<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="120dp"
        android:text="@string/payment_gateway_demo"
        android:textAlignment="center"
        android:textSize="20dp" />

    <EditText
        android:layout_margin="6dp"
        android:id="@+id/edit_amount"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:importantForAutofill="no" />



    <Button
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_now"
        android:id="@+id/btn_pay"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_margin="8dp"
        android:id="@+id/paymentStatus"
        android:text="@string/payment_status"/>



</LinearLayout>